# mycoin

./: .gitignore  Cargo.toml  README.md
src/: block.rs  blockchain.rs  lib.rs  main.rs  network.rs  transaction.rs
