[package]
name = "mycoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mycoinlib"
path = "src/lib.rs"

[[bin]]
name = "mycoin"
path = "src/main.rs"

[dependencies]
crypto-hash = "0.3.4"
rustyline = "9.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
